<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">TagHawk</string>
    <string name="no_internet">No internet</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="crash_toast_text">Oops ! App crashed, but a report has been sent to  developers to help fix the issue !</string>
    <string name="h_fname">* Enter First Name</string>
    <string name="h_lname">* Enter Last Name</string>
    <string name="h_mname">Enter Middle Name</string>
    <string name="h_email">* Enter Email ID</string>
    <string name="email_invalid_val">Please enter the valid email id</string>
    <string name="h_password">* Enter Password</string>
    <string name="h_password_lenght">Password must be minimum 6 characters length</string>
    <string name="v_gender">Please select gender</string>
    <string name="v_postal">Please enter the valid postal code</string>
    <string name="v_number">Please enter the valid phone number</string>
    <string name="h_gender">* Enter Male / Female</string>
    <string name="h_dob">* Enter DOB (mm/dd/yyyy)</string>
    <string name="h_bio">Enter Biography</string>
    <string name="h_username">Enter Username</string>
    <string name="h_age">Enter Age</string>
    <string name="h_number">Enter Number</string>
    <string name="h_number_length">Enter 10 digit Number</string>
    <string name="phone_invalid_val">Please enter the valid phone numner</string>
    <string name="h_c_code">Enter Country Code</string>
    <string name="h_city">Enter City</string>
    <string name="h_postcal_code">Enter Postal Code</string>
    <string name="h_region">Enter Region</string>
    <string name="signup">Sign Up</string>
    <string name="clipboard_copied">Copied to clipboard!!</string>
    <string name="invite_code">Invite code</string>
    <string name="Submit">Submit</string>
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="please_enter_old_pass">Please enter your old password</string>
    <string name="new_valid">Please Enter New Password</string>
    <string name="confirm_valid">Please Enter Confirm Password</string>
    <string name="match">Old password and new password doesn\'t match</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_success">You are successfully logged in</string>
    <string name="enter_email">Please enter your email</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="enter_password">Please enter your password</string>
    <string name="enter_new_password">Please enter new password</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="enter_valid_password">Password must be minimum 6 characters</string>
    <string name="reset_password_link_sent">Reset password link sent to your email id</string>
    <string name="password_reset_success">Password reset successfully</string>
    <string name="new_password_empty">Please enter new password</string>
    <string name="confirm_password_empty">Please confirm password</string>
    <string name="password_not_matched"><![CDATA[New Password & Confirm Password are not same]]></string>
    <string name="enter_from_price">Please enter from price range</string>
    <string name="select_location">Please select location</string>
    <string name="enter_to_price">Please enter to price range</string>
    <string name="enter_from_greater_price">Price range \'To\' should be greater then \'From\'</string>
    <string name="enter_phone">Please enter your number</string>
    <string name="enter_valid_phone">Please enter valid number</string>
    <string name="log_out_success">You are logged out successfully</string>
    <string name="password_changed_success">Password changed successfully</string>
    <string name="choose_your_role">Choose your role &amp; start with TagHawk</string>
    <string name="customer">Customer</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="hawk_driver">Hawk Driver</string>
    <string name="moving_company">Moving Company</string>
    <string name="login_for_more_functions">Login for more functions!</string>
    <string name="email">Email Id*</string>
    <string name="password">Password*</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="connect_with_facebool">Connect with Facebook</string>
    <string name="i_m_a_new_user_sign_up">I’m a new user, Sign Up</string>
    <string name="explore_as_guest">Explore as Guest</string>
    <string name="let_s_start_with_register">Let’s start with Register!</string>
    <string name="full_name">Full Name*</string>
    <string name="email_id_mandatory">Email ID*</string>
    <string name="password_mandatory">Password*</string>
    <string name="i_m_already_a_member">I’m already a member, Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Please enter your fullname</string>
    <string name="enter_first_name">Please enter your first name</string>
    <string name="enter_valid_name">Please enter valid fullname</string>
    <string name="enter_valid_first_name">Please enter valid first name</string>
    <string name="enter_last_name">Please enter valid last name</string>
    <string name="enter_valid_last_name">Please enter valid last name</string>
    <string name="facebook_app_id">446906379222664</string>
    <string name="email_required">Email Required</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_lowercase">Cancel</string>
    <string name="no_category_found_please_try_again_later">No Category found,Please try again later.</string>
    <string name="categories">Categories</string>
    <string name="truble_in_loging">Trouble logging in!</string>
    <string name="please_enter_your_registered_email_id_you_will_receive_a_link_to_create_a_new_password">Please enter your registered email ID.\n You will receive a link to create a\n new password</string>
    <string name="resend_link">Send Reset Link</string>
    <string name="successfully">Successfully!</string>
    <string name="success">Success!</string>
    <string name="info_">Info</string>
    <string name="verification_status">Verification Status</string>
    <string name="a_link_has_been_sent_to_your_registered_email_id">A link has been sent to your registered email ID.</string>
    <string name="reset_password">Reset Password!</string>
    <string name="please_enter_your_new_password_followed_n_by_the_confirm_same">Please enter your new password followed  by the confirm same</string>
    <string name="please_enter_your_old_password_followed_n_by_the_confirm_same">Please enter your old and new password</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="set_location">Set Location</string>
    <string name="location">Location</string>
    <string name="product_location">Product Location</string>
    <string name="distance">Distance (in Miles)</string>
    <string name="price_range">Price Range</string>
    <string name="from">From</string>
    <string name="select">Select</string>
    <string name="posted_within">Posted Within</string>
    <string name="conditions">Conditions</string>
    <string name="condition">Condition</string>
    <string name="condition_">Condition*</string>
    <string name="new_never_used">New (never used)</string>
    <string name="like_new_rarely_used">Like New (rarely used)</string>
    <string name="good_gently_used">Good (gently used)</string>
    <string name="normal_normal_wear">Normal (normal wear)</string>
    <string name="flawed_with_flaw">Flawed (with flaw)</string>
    <string name="seller_rate">Seller Rate</string>
    <string name="rate_seller">Rate Seller</string>
    <string name="seller">Seller</string>
    <string name="under_development">Under Development</string>
    <string name="tags">Tags</string>
    <string name="items">Items</string>
    <string name="all">All</string>
    <string name="search">   Search in All</string>
    <string name="search_all_cat">   Search in All Categories</string>
    <string name="search_in">Search in </string>
    <string name="no_data_found">No results found</string>
    <string name="no_data_found_">We couldn\'t find anything that matches your search</string>
    <string name="similar_items">Similar Items</string>
    <string name="chat">Chat</string>
    <string name="buy_now">Buy Now</string>
    <string name="just_now">Right now</string>
    <string name="a_min_ago">1 minute ago</string>
    <string name="mins_ago">" minutes ago"</string>
    <string name="a_hour_ago">1 hour ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="days_ago">" days ago"</string>
    <string name="week_ago">" week ago"</string>
    <string name="weeks_ago">" weeks ago"</string>
    <string name="month_ago">" month ago"</string>
    <string name="months_ago">" months ago"</string>
    <string name="year_ago">" year ago"</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="sell_amp_buy_products"><![CDATA[Sell & Buy Products!]]></string>
    <string name="report_product">Report Product</string>
    <string name="select_your_reason_why_are_you_reporting_this_product">Why are you reporting this product?</string>
    <string name="product_already_sold">Offensive or Inappropriate Content</string>
    <string name="seller_not_reponding">Offline Payment Request</string>
    <string name="ad_is_duplicate">Product already sold</string>
    <string name="wrong_category">Duplicate post</string>
    <string name="offensive_content">Wrong Category</string>
    <string name="might_be_scam">Might be Scam</string>
    <string name="other">Others</string>
    <string name="report">Report</string>
    <string name="cencel">Cancel</string>
    <string name="newest">Newest</string>
    <string name="closest">Closest</string>
    <string name="price_high_to_low">Price: High To Low</string>
    <string name="price_low_to_high">Price: Low To High</string>
    <string name="today">24 Hours</string>
    <string name="this_week">One Week</string>
    <string name="this_month">One month</string>
    <string name="this_year">One year</string>
    <string name="last_threee_month">Last 3 months</string>
    <string name="all_member">All Members</string>
    <string name="above_10_members">Above 10 members</string>
    <string name="above_50_members">Above 50 members</string>
    <string name="above_100_members">Above 100 members</string>
    <string name="above_500_members">Above 500 members</string>
    <string name="above_1000_members">Above 1000 members</string>
    <string name="logout">Logout</string>
    <string name="remove">Remove</string>
    <string name="block">Block</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="change_password">Change password</string>
    <string name="block_users">Blocked Users</string>
    <string name="register_as_hawkdriver">Register as Hawkdriver</string>
    <string name="faq">FAQ</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="mute">Mute</string>
    <string name="view_profile">View Profile</string>
    <string name="message">Message</string>
    <string name="make_group_admin">Make Group Admin</string>
    <string name="transfer_ownership">Transfer Ownership</string>
    <string name="refer_friend">Refer to friend</string>
</resources>