<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galano_grotesque_bold"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/report_product"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/galano_grotesque_medium"
            android:text="@string/select_your_reason_why_are_you_reporting_this_product"
            android:textColor="@color/txt_black"
            android:textSize="@dimen/_12sdp" />

        <RadioGroup
            android:id="@+id/rg_report"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_already_sold"
                style="@style/report_style"
                android:text="@string/product_already_sold" />

            <RadioButton
                android:id="@+id/rb_seller_not_responding"
                style="@style/report_style"
                android:text="@string/seller_not_reponding" />

            <RadioButton
                android:id="@+id/rb_ad_is_duplicate"
                style="@style/report_style"
                android:text="@string/ad_is_duplicate" />

            <RadioButton
                android:id="@+id/rb_wrong_category"
                style="@style/report_style"
                android:text="@string/wrong_category" />

            <RadioButton
                android:id="@+id/rb_offensive_content"
                style="@style/report_style"
                android:text="@string/offensive_content" />

            <RadioButton
                android:id="@+id/rb_might_be_scam"
                style="@style/report_style"
                android:text="@string/might_be_scam" />

            <RadioButton
                android:id="@+id/rb_other"
                style="@style/report_style"
                android:text="@string/other" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_other_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edit_field_drawable"
            android:imeOptions="actionDone"
            android:paddingStart="@dimen/_10sdp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/round_border_color_primary"
                    android:fontFamily="@font/galano_grotesque_semi_bold"
                    android:gravity="center"
                    android:text="@string/cencel"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_report"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_buy_button"
                    android:fontFamily="@font/galano_grotesque_semi_bold"
                    android:gravity="center"
                    android:text="@string/report"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>