<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_today"
                    style="@style/post_in_style"
                    android:text="@string/today" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_yesterday"
                    style="@style/post_in_style"
                    android:text="@string/yesterday"
                    android:visibility="gone" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_this_week"
                    style="@style/post_in_style"
                    android:text="@string/this_week" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_this_month"
                    style="@style/post_in_style"
                    android:text="@string/this_month" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_last_three_month"
                    style="@style/post_in_style"
                    android:text="@string/last_threee_month" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_this_year"
                    style="@style/post_in_style"
                    android:text="@string/this_year" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>