<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_new"
                    style="@style/post_in_style"
                    android:text="@string/new_never_used" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_likly_new"
                    style="@style/post_in_style"

                    android:text="@string/like_new_rarely_used" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_good"
                    style="@style/post_in_style"
                    android:text="@string/good_gently_used" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_normal"
                    style="@style/post_in_style"
                    android:text="@string/normal_normal_wear" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_flawed"
                    style="@style/post_in_style"
                    android:text="@string/flawed_with_flaw" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>