<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_144sdp"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_filled_background_tendp"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_newest"
                    style="@style/sort_style"
                    android:text="@string/newest" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_closest"
                    style="@style/sort_style"
                    android:text="@string/closest" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_price_high_low"
                    style="@style/sort_style"
                    android:text="@string/price_high_to_low" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_low_to_high"
                    style="@style/sort_style"
                    android:text="@string/price_low_to_high" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>